--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,3 +7,13 @@
   number = 	 1,
   pages = 	 {1-2},
   month = 	 {Aug}}
+  
+  @misc{WHOepi,
+    author        =   "WHO",
+    title         =   "Injuries and violence",
+    howpublished  =   "\url{https://www.who.int/news-room/fact-sheets/detail/injuries-and-violence#:~:text=Of%20the%204.4%20million%20injury,1.25%20million%20people%20every%20year.}",
+    year          =   2021,
+    month         =   mar,
+    note          =   "Accessed: 2022-08-30"
+  }
+  
