Progress on the method section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,3 +17,12 @@
     note          =   "Accessed: 2022-08-30"
   }
   
+
+@misc{NKStrauma,
+    author        = "Hanna Melbin",
+    title         = "Karolinska University Hospital becomes Sweden’s first trauma centre",
+    howpublished  = "\url{https://www.karolinska.se/en/karolinska-university-hospital/news/2020/12/karolinska-university-hospital-becomes-swedens-first-trauma-centre}",
+    year          = "2020",
+    month         = "dec",
+    note          = "Accessed: 2022-09-08",
+  }
